5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1831_3180.log
== TEST (2019-06-13 16:14:56) 
-- CODE:
from numpy import*

a = array(eval(input("Digite: ")))

b = zeros(4, dtype = int):
	
for i in range(size(a)):
	if(a[i] == 1):
		b[1] = b[1] + 1

print(b)		
-- ERROR:
File "XXXX", line 5
    b = zeros(4, dtype = int):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:15:00) 
-- CODE:
from numpy import*

a = array(eval(input("Digite: ")))

b = zeros(4, dtype = int)
	
for i in range(size(a)):
	if(a[i] == 1):
		b[1] = b[1] + 1

print(b)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:28) 
-- CODE:
from numpy import*

a = array(eval(input("Digite: ")))

b = zeros(3, dtype = int)
	
for i in range(size(a)):
	if(a[i] == 1):
		b[0] = b[0] + 1
	if(a[i] == 2):
		b[1] = b[1] + 1
	if(a[i] == 3):
		b[2] = b[2] + 1
	if(a[i] == 4):
		b[3] = b[3] + 1
		
print(b)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:51) 
-- CODE:
from numpy import*

a = array(eval(input("Digite: ")))

b = zeros(4, dtype = int)
	
for i in range(size(a)):
	if(a[i] == 1):
		b[0] = b[0] + 1
	if(a[i] == 2):
		b[1] = b[1] + 1
	if(a[i] == 3):
		b[2] = b[2] + 1
	if(a[i] == 4):
		b[3] = b[3] + 1
		
print(b)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:59) 
-- CODE:
from numpy import*

a = array(eval(input("Digite: ")))

b = zeros(4, dtype = int)
	
for i in range(size(a)):
	if(a[i] == 1):
		b[0] = b[0] + 1
	if(a[i] == 2):
		b[1] = b[1] + 1
	if(a[i] == 3):
		b[2] = b[2] + 1
	if(a[i] == 4):
		b[3] = b[3] + 1
		
print(b)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:17:07) 
-- CODE:
from numpy import*

a = array(eval(input("Digite: ")))

b = zeros(4, dtype = int)
	
for i in range(size(a)):
	if(a[i] == 1):
		b[0] = b[0] + 1
	if(a[i] == 2):
		b[1] = b[1] + 1
	if(a[i] == 3):
		b[2] = b[2] + 1
	if(a[i] == 4):
		b[3] = b[3] + 1
		
print(b)		
-- EXECUTION TIME:
1.03991
-- TEST CASE 1:
---- input:
[1,2,3,4,3,2,1,2,3,2,4,1]
---- correct output:
[3 4 3 2]
---- user output:
[3 4 3 2]
-- TEST CASE 2:
---- input:
[1,3,3,4,1,3,1]
---- correct output:
[3 0 3 1]
---- user output:
[3 0 3 1]
-- TEST CASE 3:
---- input:
[1,2,3,4,1,2,3,4,1,2,3,4,1,2,3,4]
---- correct output:
[4 4 4 4]
---- user output:
[4 4 4 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
